# similitude

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pyvenv.cfg
.github/: COMMIT_TEMPLATE.md
.github/workflows/: ci.yml
docs/: 2025-08-31-ToDo.md  architecture.md  github_issues.md  pre-commit-config.md  quickstart.md  roadmap.md
src/similitude/: logging_config.py
src/similitude/adapters/: __init__.py
src/similitude/adapters/index/: __init__.py  sqlite_index.py
src/similitude/adapters/similarity/: image_phash.py  ssdeep_adapter.py
src/similitude/cli/: app.py
src/similitude/domain/: __init__.py  errors.py
src/similitude/ports/: __init__.py  filesystem.py  hasher.py  index.py  similarity.py
src/similitude/services/: __init__.py  duplicate_service.py  lineage_service.py  report_service.py  scan_service.py  similarity_service.py
tests/: conftest.py
tests/cli/: test_Cli_roundtrip.py  test_cli_enable_validation.py  test_cli_flags_smoke.py  test_cli_help.py  test_cli_report_out_dir.py
tests/integration/: test_scan_and_report.py
tests/services/: test_scan_readbytes_fallback.py
tests/unit/: test_domain_imports.py  test_image_phash.py  test_report_service_behaviour.py  test_report_service_branches.py  test_report_service_formats.py  test_report_service_more_formats.py  test_scan_ignore.py  test_scan_service_errors.py  test_sqlite_index.py  test_sqlite_index_branches.py  test_sqlite_index_singleton.py  test_sqlite_index_validation.py  test_ssdeep_adapter.py
