[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "similitude"
version = "0.1.0"
description = "File intelligence and duplicate detection with similarity awareness"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
  { name = "Justin McKeown", email = "jmckeownuk@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
  "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.8.0",
    ]

[project.scripts]
similitude = "similitude.cli.app:app"

[tools.setuptools.packages.find]
where = ["src"]
